--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lunar Hotel | Your favorite Getaway Destination</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
