--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" property="og:title" content="Lunar Hotel" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Rent a room!"
+    />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://user-images.githubusercontent.com/77190203/151373697-8ec631cf-1843-431c-8e7e-c3126f893c03.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script
